# memx

./: .gitignore  DEVELOPER.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
benchmarks/: __init__.py  agent_memory.py  competitor.py  concurrency.py  integrity.py  latency.py  memory_profile.py  production_stress_test.py  rag_comparison.py  run.py  scalability.py  scale.py  suite.py
examples/: bharatsearch.py  langchain_memx.py  memory_assistant.py  quickstart.py
memx/: __init__.py  api.py  classify.py  cli.py  types.py
memx/backends/: __init__.py  base.py  sqlite_backend.py
memx/core/: __init__.py  braintrace.py  compression.py  distributed.py  embeddings.py  graph.py  importance.py  inspector.py  kv.py  reflection.py  updater.py  utils.py  vector.py
memx/integrations/: __init__.py  crewai.py  langchain.py
memx/viz/: __init__.py  server.py
tests/: test_api.py  test_backends.py  test_cli.py  test_memory_os.py  test_types.py
