[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memx-os"
version = "0.2.0"
description = "AI Memory Operating System — importance scoring, compression, reflection, multi-agent namespaces, hybrid RAG."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mohit Kumar Rajbadi"}
]
keywords = [
    "ai", "memory", "rag", "vector-search", "embeddings", "llm", "agents",
    "memory-os", "compression", "reflection", "importance", "multi-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "faiss-cpu>=1.7.4",
    "click>=8.0.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]
langchain = ["langchain>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "sentence-transformers>=2.2.0",
    "langchain>=0.1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
memx = "memx.cli:main"

[project.urls]
Homepage = "https://github.com/mohitbadi/memx-ai"
Repository = "https://github.com/mohitbadi/memx-ai"
Issues = "https://github.com/mohitbadi/memx-ai/issues"

[tool.setuptools.packages.find]
include = ["memx*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
